--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -94,7 +94,7 @@
 }
 
 .work-info-card {
-    height: 330px;
+    height: 350px;
     /* padding: 10px, 10px, 10px, 10px; */
     background-color: white;
     overflow: auto;
